--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -47,8 +47,8 @@
 
     <Button
         android:id="@+id/savePasswordButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
         android:text="修改密码"
         android:layout_below="@+id/againPasswordEdit"
         android:layout_marginTop="50dp"
