--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -45,6 +45,7 @@
         android:layout_marginTop="7dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_account_circle_black_24dp"
+        android:scaleType="fitCenter"
         />
 
     <View
