add information and change ui

--- a/app/src/main/res/layout/fragment_main_3_fun_2_.xml
+++ b/app/src/main/res/layout/fragment_main_3_fun_2_.xml
@@ -5,10 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".main_3_fun_2_Fragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/inforRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        />
 
 </FrameLayout>
