--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:textSize="35sp"/>
 
     <Button
-        android:text="快速登录"
+        android:text="快速登陆"
         android:id="@+id/phoneLogin"
         android:textColor="	#20B2AA"
         android:background="@android:color/transparent"
@@ -23,7 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="20dp"/>
+        android:layout_marginRight="20dp"
+        android:visibility="gone"/>
 
     <EditText
         android:id="@+id/loginUser"
@@ -73,37 +74,45 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/loginPassword">
-    <CheckBox
-        android:id="@+id/remember"
-        android:text="7天内免登录"
-        android:layout_marginLeft="60dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        <CheckBox
+            android:id="@+id/remember"
+            android:text="7天内免登录"
+            android:layout_marginLeft="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-    <Button
-        android:visibility="visible"
-        android:id="@+id/forget"
-        android:text="忘记密码？"
-        android:textSize="12sp"
-        android:background="@android:color/transparent"
-        android:layout_width="wrap_content"
-        android:layout_height="32sp"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="60dp"
-        />
+        <Button
+            android:visibility="visible"
+            android:id="@+id/forget"
+            android:text="忘记密码？"
+            android:textSize="12sp"
+            android:background="@android:color/transparent"
+            android:layout_width="wrap_content"
+            android:layout_height="32sp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="60dp"
+            />
 
     </RelativeLayout>
 
-    <ImageButton
-        android:background="@android:color/transparent"
-        android:src="@drawable/login"
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="登录"
         android:id="@+id/login"
-        android:layout_below="@id/rmbandfgt"
-        android:layout_marginTop="20dp"
-        android:visibility="gone"
-        android:layout_centerHorizontal="true"/>
+        android:layout_below="@+id/rmbandfgt"
+        android:layout_marginLeft="80dp"
+        android:layout_marginRight="80dp" />
+
+    <Button
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="注册"
+        android:id="@+id/register"
+        android:layout_below="@+id/login"
+        android:layout_marginLeft="80dp"
+        android:layout_marginRight="80dp"/>
 
     <TextView
         android:id="@+id/tipText"
